@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: openjpeg
+Description: JPEG2000 files library
+URL: http://code.google.com/p/openjpeg/
+Version: @VERSION@
+Libs: -L${libdir} -lopenjpeg
+Cflags: -I${includedir}
